--- a/server/.env
+++ b/server/.env
@@ -1,16 +1,16 @@
-MAIL_HOST = smtp.gmail.com
-MAIL_USER = codehelpdummy1@gmail.com
-MAIL_PASS = dzgvtybtweasxrqd
+MAIL_HOST = 
+MAIL_USER =
+MAIL_PASS = 
 
-JWT_SECRET = "babbar"
-FOLDER_NAME = "CodeHelp"
+JWT_SECRET = 
+FOLDER_NAME = 
 
-RAZORPAY_KEY = rzp_test_t4LUM04KXw6wHc
-RAZORPAY_SECRET = DOdtPrjZRxQejIdj1vAzm0MY
+RAZORPAY_KEY =
+RAZORPAY_SECRET = 
 
-CLOUD_NAME = drvlktf2h
-API_KEY = 422883961873369
-API_SECRET = ao3gCb8il3MJdRecSU2X4gL6GTs
+CLOUD_NAME = 
+API_KEY = 
+API_SECRET = 
 
-MONGODB_URL = "mongodb+srv://lovebabbar3:D7W857uJ2QOHHc5K@cluster0.c0k4xvu.mongodb.net/StudyNotionDB"
-PORT = 4000
+MONGODB_URL =
+PORT = 
